Fix interest rect computation for squashed layers under transform.

Instead of using one of the squashed layers as the starting point, use
the transformed ancestor, from which we have already computed an offset
to the squashing layer.

As a result, remove the squashing-prevention rule about non-translation
transforms.

Bug: 750433
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I4cf1fc5a2e34d7e40023d4c3481bb517c3b6e72f
Reviewed-on: https://chromium-review.googlesource.com/658335
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501157}
Former-commit-id: 707023d380f9c090b21bce9d0f4cb502cce2858a