third_party/WebKit/Source/platform/graphics/SquashingDisallowedReasons.cpp
@@ -62,10 +62,6 @@ const SquashingDisallowedReasonStringMap kSquashingDisallowedReasonStringMap[] =
         {kSquashingDisallowedReasonRenderingContextMismatch,
          "squashingLayerRenderingContextMismatch",
          "Cannot squash layers with different 3D contexts."},
-        {kSquashingDisallowedReasonNonTranslationTransform,
-         "SquashingDisallowedReasonNonTranslationTransform",
-         "Cannot squash layers with transforms that are not identity or "
-         "translation."},
         {kSquashingDisallowedReasonFragmentedContent,
          "SquashingDisallowedReasonFragmentedContent",
          "Cannot squash layers that are inside fragmentation contexts."},
