third_party/WebKit/Source/platform/graphics/SquashingDisallowedReasons.h
@@ -28,8 +28,7 @@ enum SquashingDisallowedReason {
   kSquashingDisallowedReasonScrollChildWithCompositedDescendants = 1 << 12,
   kSquashingDisallowedReasonSquashingLayerIsAnimating = 1 << 13,
   kSquashingDisallowedReasonRenderingContextMismatch = 1 << 14,
-  kSquashingDisallowedReasonNonTranslationTransform = 1 << 15,
-  kSquashingDisallowedReasonFragmentedContent = 1 << 16,
+  kSquashingDisallowedReasonFragmentedContent = 1 << 15,
 };
 
 typedef unsigned SquashingDisallowedReasons;
